--- a/asep_model.ipynb
+++ b/asep_model.ipynb
@@ -19,7 +19,7 @@
     "import openmm.unit as u\n",
     "import deeptime as dt\n",
     "import networkx as nx\n",
-    "\n",
+    "from itertools import combinations, permutations, combinations_with_replacement, product\n",
     "\n",
     "from cycler import cycler\n",
     "plt.rcParams['font.size'] = 7\n",
@@ -456,7 +456,9 @@
   {
    "cell_type": "markdown",
    "id": "cbaccf5c-453d-490f-b1fc-653836f0e751",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# Utils"
    ]
@@ -600,6 +602,343 @@
   },
   {
    "cell_type": "markdown",
+   "id": "eaeb5ecb-3062-4f22-b49e-b27eb8e6a1aa",
+   "metadata": {},
+   "source": [
+    "# occupancies"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "2db05841-0e65-4052-b14c-58577288e644",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def isallowedTransition(i, j):\n",
+    "    result = False\n",
+    "    Ki = (i == \"K\") * 1\n",
+    "    Kj = (j == \"K\") * 1\n",
+    "    Wi = (i == \"W\") * 1\n",
+    "    Wj = (j == \"W\") * 1\n",
+    "    # numKi = np.sum(Ki)\n",
+    "    # numWi = np.sum(Wi)\n",
+    "    # numKj = np.sum(Kj)\n",
+    "    # numWj = np.sum(Wj)\n",
+    "    # diffK = numKi - numKj\n",
+    "    # diffW = numWi - numWj\n",
+    "    diffK = Ki - Kj\n",
+    "    numForwardK = np.sum(diffK == 1)\n",
+    "    numBackwardK = np.sum(diffK == -1)\n",
+    "    diffW = Wi - Wj\n",
+    "    numForwardW = np.sum(diffW == 1)\n",
+    "    numBackwardW = np.sum(diffW == -1)\n",
+    "    condK = np.sum(diffK)\n",
+    "    condW = np.sum(diffW)\n",
+    "    if condK == 0 and numForwardK == 1 and numBackwardK == 1 and numForwardW == 0 and numBackwardW == 0:\n",
+    "        delta = np.where(diffK == 1)[0] - np.where(diffK == -1)[0]\n",
+    "        if abs(delta) == 1:\n",
+    "            result = True\n",
+    "    elif abs(condK) == 1 and condW == 0 and numForwardW == 0 and numBackwardW == 0 \\\n",
+    "    and (numForwardK == 1 and numBackwardK == 0 or numBackwardK == 1 and numForwardK == 0) \\\n",
+    "    and ((i[0] == \"V\" and j[0] == \"K\") \\\n",
+    "         or (i[0] == \"K\" and j[0] == \"V\")\n",
+    "         or (i[-1] == \"K\" and j[-1] == \"V\") \\\n",
+    "         or (i[-1] == \"V\" and j[-1] == \"K\")):\n",
+    "        result = True\n",
+    "    if condW == 0 and numForwardW == 1 and numBackwardW == 1 and numForwardK == 0 and numBackwardK == 0:\n",
+    "        delta = np.where(diffW == 1)[0] - np.where(diffW == -1)[0]\n",
+    "        if abs(delta) == 1:\n",
+    "            result = True\n",
+    "    elif abs(condW) == 1 and condK == 0 and numForwardK == 0 and numBackwardK == 0\\\n",
+    "    and (numForwardW == 1 and numBackwardW == 0 or numBackwardW == 1 and numForwardW == 0) \\\n",
+    "    and ((i[0] == \"V\" and j[0] == \"W\") \\\n",
+    "         or (i[0] == \"W\" and j[0] == \"V\") \\\n",
+    "         or (i[-1] == \"W\" and j[-1] == \"V\") \\\n",
+    "         or (i[-1] == \"V\" and j[-1] == \"W\")):\n",
+    "        result = True\n",
+    "    return (result, diffK, diffW)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "d6d6892b-7937-459c-adaa-564e35f34875",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def isConduction(i, j):\n",
+    "    result = False\n",
+    "    cond = 0\n",
+    "    Ki = (i == \"K\") * 1\n",
+    "    Kj = (j == \"K\") * 1\n",
+    "    numKi = np.sum(Ki)\n",
+    "    numKj = np.sum(Kj)\n",
+    "    if numKi == numKj:\n",
+    "        result = True\n",
+    "    elif (numKi < numKj and i[-1] == \"V\" and j[-1] == \"K\") \\\n",
+    "    or (numKi > numKj and i[0] == \"K\" and j[0] == \"V\"):\n",
+    "        result = True\n",
+    "        cond -= 1\n",
+    "    elif (numKi < numKj and i[0] == \"V\" and j[0] == \"K\") \\\n",
+    "    or (numKi > numKj and i[-1] == \"K\" and j[-1] == \"V\"):\n",
+    "        result = True\n",
+    "        cond += 1\n",
+    "    return (result, cond)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "82497c33-d2ed-4586-8a13-0a3e84035f2e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "microstates = np.array(list(product([\"V\", \"W\", \"K\"], repeat=5)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "08d728b6-5214-4591-bd8d-45a7e146b323",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(243, 5)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "microstates.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "2c5ff612-714c-43dd-a8c1-4ad27adc68e5",
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true,
+     "source_hidden": true
+    },
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  240   \t->\t   78\n",
+      "['K' 'K' 'K' 'K' 'V'] \t ['V' 'K' 'K' 'K' 'V']\n",
+      "[1 0 0 0 0]  [0 0 0 0 0]\n",
+      "  240   \t->\t  236\n",
+      "['K' 'K' 'K' 'K' 'V'] \t ['K' 'K' 'K' 'V' 'K']\n",
+      "[ 0  0  0  1 -1]  [0 0 0 0 0]\n",
+      "  240   \t->\t  241\n",
+      "['K' 'K' 'K' 'K' 'V'] \t ['K' 'K' 'K' 'K' 'W']\n",
+      "[0 0 0 0 0]  [ 0  0  0  0 -1]\n",
+      "  240   \t->\t  242\n",
+      "['K' 'K' 'K' 'K' 'V'] \t ['K' 'K' 'K' 'K' 'K']\n",
+      "[ 0  0  0  0 -1]  [0 0 0 0 0]\n",
+      "  241   \t->\t   79\n",
+      "['K' 'K' 'K' 'K' 'W'] \t ['V' 'K' 'K' 'K' 'W']\n",
+      "[1 0 0 0 0]  [0 0 0 0 0]\n",
+      "  241   \t->\t  240\n",
+      "['K' 'K' 'K' 'K' 'W'] \t ['K' 'K' 'K' 'K' 'V']\n",
+      "[0 0 0 0 0]  [0 0 0 0 1]\n",
+      "  242   \t->\t   80\n",
+      "['K' 'K' 'K' 'K' 'K'] \t ['V' 'K' 'K' 'K' 'K']\n",
+      "[1 0 0 0 0]  [0 0 0 0 0]\n",
+      "  242   \t->\t  240\n",
+      "['K' 'K' 'K' 'K' 'K'] \t ['K' 'K' 'K' 'K' 'V']\n",
+      "[0 0 0 0 1]  [0 0 0 0 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(240, microstates.shape[0]):\n",
+    "    for j in range(microstates.shape[0]):\n",
+    "        _, condK, condW = isallowedTransition(microstates[i], microstates[j])\n",
+    "        if _:\n",
+    "            print(\"  {:<6}\\t->\\t{:5}\\n{} \\t {}\\n{}  {}\".format(i, j, \n",
+    "                                                        microstates[i], microstates[j], \n",
+    "                                                        condK, condW))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "id": "72375f04-f0df-424b-b430-951d1ca7db89",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['W', 'V', 'V', 'W', 'W'], dtype='<U1')"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "microstates[85] "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "id": "21b56049-e4d0-41c1-a25e-b55d76f07d5e",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  230   \t->\t   68\t-1\n",
+      "['K' 'K' 'W' 'W' 'K'] \t ['V' 'K' 'W' 'W' 'K']\n",
+      "[1 0 0 0 0]  [0 0 0 0 0]\n",
+      "  230   \t->\t  228\t+1\n",
+      "['K' 'K' 'W' 'W' 'K'] \t ['K' 'K' 'W' 'W' 'V']\n",
+      "[0 0 0 0 1]  [0 0 0 0 0]\n",
+      "  231   \t->\t   69\t-1\n",
+      "['K' 'K' 'W' 'K' 'V'] \t ['V' 'K' 'W' 'K' 'V']\n",
+      "[1 0 0 0 0]  [0 0 0 0 0]\n",
+      "  231   \t->\t  227\t+0\n",
+      "['K' 'K' 'W' 'K' 'V'] \t ['K' 'K' 'W' 'V' 'K']\n",
+      "[ 0  0  0  1 -1]  [0 0 0 0 0]\n",
+      "  231   \t->\t  232\t+0\n",
+      "['K' 'K' 'W' 'K' 'V'] \t ['K' 'K' 'W' 'K' 'W']\n",
+      "[0 0 0 0 0]  [ 0  0  0  0 -1]\n",
+      "  231   \t->\t  233\t-1\n",
+      "['K' 'K' 'W' 'K' 'V'] \t ['K' 'K' 'W' 'K' 'K']\n",
+      "[ 0  0  0  0 -1]  [0 0 0 0 0]\n",
+      "  232   \t->\t   70\t-1\n",
+      "['K' 'K' 'W' 'K' 'W'] \t ['V' 'K' 'W' 'K' 'W']\n",
+      "[1 0 0 0 0]  [0 0 0 0 0]\n",
+      "  232   \t->\t  231\t+0\n",
+      "['K' 'K' 'W' 'K' 'W'] \t ['K' 'K' 'W' 'K' 'V']\n",
+      "[0 0 0 0 0]  [0 0 0 0 1]\n",
+      "  233   \t->\t   71\t-1\n",
+      "['K' 'K' 'W' 'K' 'K'] \t ['V' 'K' 'W' 'K' 'K']\n",
+      "[1 0 0 0 0]  [0 0 0 0 0]\n",
+      "  233   \t->\t  231\t+1\n",
+      "['K' 'K' 'W' 'K' 'K'] \t ['K' 'K' 'W' 'K' 'V']\n",
+      "[0 0 0 0 1]  [0 0 0 0 0]\n",
+      "  234   \t->\t   72\t-1\n",
+      "['K' 'K' 'K' 'V' 'V'] \t ['V' 'K' 'K' 'V' 'V']\n",
+      "[1 0 0 0 0]  [0 0 0 0 0]\n",
+      "  234   \t->\t  222\t+0\n",
+      "['K' 'K' 'K' 'V' 'V'] \t ['K' 'K' 'V' 'K' 'V']\n",
+      "[ 0  0  1 -1  0]  [0 0 0 0 0]\n",
+      "  234   \t->\t  235\t+0\n",
+      "['K' 'K' 'K' 'V' 'V'] \t ['K' 'K' 'K' 'V' 'W']\n",
+      "[0 0 0 0 0]  [ 0  0  0  0 -1]\n",
+      "  234   \t->\t  236\t-1\n",
+      "['K' 'K' 'K' 'V' 'V'] \t ['K' 'K' 'K' 'V' 'K']\n",
+      "[ 0  0  0  0 -1]  [0 0 0 0 0]\n",
+      "  235   \t->\t   73\t-1\n",
+      "['K' 'K' 'K' 'V' 'W'] \t ['V' 'K' 'K' 'V' 'W']\n",
+      "[1 0 0 0 0]  [0 0 0 0 0]\n",
+      "  235   \t->\t  223\t+0\n",
+      "['K' 'K' 'K' 'V' 'W'] \t ['K' 'K' 'V' 'K' 'W']\n",
+      "[ 0  0  1 -1  0]  [0 0 0 0 0]\n",
+      "  235   \t->\t  234\t+0\n",
+      "['K' 'K' 'K' 'V' 'W'] \t ['K' 'K' 'K' 'V' 'V']\n",
+      "[0 0 0 0 0]  [0 0 0 0 1]\n",
+      "  235   \t->\t  237\t+0\n",
+      "['K' 'K' 'K' 'V' 'W'] \t ['K' 'K' 'K' 'W' 'V']\n",
+      "[0 0 0 0 0]  [ 0  0  0 -1  1]\n",
+      "  236   \t->\t   74\t-1\n",
+      "['K' 'K' 'K' 'V' 'K'] \t ['V' 'K' 'K' 'V' 'K']\n",
+      "[1 0 0 0 0]  [0 0 0 0 0]\n",
+      "  236   \t->\t  224\t+0\n",
+      "['K' 'K' 'K' 'V' 'K'] \t ['K' 'K' 'V' 'K' 'K']\n",
+      "[ 0  0  1 -1  0]  [0 0 0 0 0]\n",
+      "  236   \t->\t  234\t+1\n",
+      "['K' 'K' 'K' 'V' 'K'] \t ['K' 'K' 'K' 'V' 'V']\n",
+      "[0 0 0 0 1]  [0 0 0 0 0]\n",
+      "  236   \t->\t  240\t+0\n",
+      "['K' 'K' 'K' 'V' 'K'] \t ['K' 'K' 'K' 'K' 'V']\n",
+      "[ 0  0  0 -1  1]  [0 0 0 0 0]\n",
+      "  237   \t->\t   75\t-1\n",
+      "['K' 'K' 'K' 'W' 'V'] \t ['V' 'K' 'K' 'W' 'V']\n",
+      "[1 0 0 0 0]  [0 0 0 0 0]\n",
+      "  237   \t->\t  235\t+0\n",
+      "['K' 'K' 'K' 'W' 'V'] \t ['K' 'K' 'K' 'V' 'W']\n",
+      "[0 0 0 0 0]  [ 0  0  0  1 -1]\n",
+      "  237   \t->\t  238\t+0\n",
+      "['K' 'K' 'K' 'W' 'V'] \t ['K' 'K' 'K' 'W' 'W']\n",
+      "[0 0 0 0 0]  [ 0  0  0  0 -1]\n",
+      "  237   \t->\t  239\t-1\n",
+      "['K' 'K' 'K' 'W' 'V'] \t ['K' 'K' 'K' 'W' 'K']\n",
+      "[ 0  0  0  0 -1]  [0 0 0 0 0]\n",
+      "  238   \t->\t   76\t-1\n",
+      "['K' 'K' 'K' 'W' 'W'] \t ['V' 'K' 'K' 'W' 'W']\n",
+      "[1 0 0 0 0]  [0 0 0 0 0]\n",
+      "  238   \t->\t  237\t+0\n",
+      "['K' 'K' 'K' 'W' 'W'] \t ['K' 'K' 'K' 'W' 'V']\n",
+      "[0 0 0 0 0]  [0 0 0 0 1]\n",
+      "  239   \t->\t   77\t-1\n",
+      "['K' 'K' 'K' 'W' 'K'] \t ['V' 'K' 'K' 'W' 'K']\n",
+      "[1 0 0 0 0]  [0 0 0 0 0]\n",
+      "  239   \t->\t  237\t+1\n",
+      "['K' 'K' 'K' 'W' 'K'] \t ['K' 'K' 'K' 'W' 'V']\n",
+      "[0 0 0 0 1]  [0 0 0 0 0]\n",
+      "  240   \t->\t   78\t-1\n",
+      "['K' 'K' 'K' 'K' 'V'] \t ['V' 'K' 'K' 'K' 'V']\n",
+      "[1 0 0 0 0]  [0 0 0 0 0]\n",
+      "  240   \t->\t  236\t+0\n",
+      "['K' 'K' 'K' 'K' 'V'] \t ['K' 'K' 'K' 'V' 'K']\n",
+      "[ 0  0  0  1 -1]  [0 0 0 0 0]\n",
+      "  240   \t->\t  241\t+0\n",
+      "['K' 'K' 'K' 'K' 'V'] \t ['K' 'K' 'K' 'K' 'W']\n",
+      "[0 0 0 0 0]  [ 0  0  0  0 -1]\n",
+      "  240   \t->\t  242\t-1\n",
+      "['K' 'K' 'K' 'K' 'V'] \t ['K' 'K' 'K' 'K' 'K']\n",
+      "[ 0  0  0  0 -1]  [0 0 0 0 0]\n",
+      "  241   \t->\t   79\t-1\n",
+      "['K' 'K' 'K' 'K' 'W'] \t ['V' 'K' 'K' 'K' 'W']\n",
+      "[1 0 0 0 0]  [0 0 0 0 0]\n",
+      "  241   \t->\t  240\t+0\n",
+      "['K' 'K' 'K' 'K' 'W'] \t ['K' 'K' 'K' 'K' 'V']\n",
+      "[0 0 0 0 0]  [0 0 0 0 1]\n",
+      "  242   \t->\t   80\t-1\n",
+      "['K' 'K' 'K' 'K' 'K'] \t ['V' 'K' 'K' 'K' 'K']\n",
+      "[1 0 0 0 0]  [0 0 0 0 0]\n",
+      "  242   \t->\t  240\t+1\n",
+      "['K' 'K' 'K' 'K' 'K'] \t ['K' 'K' 'K' 'K' 'V']\n",
+      "[0 0 0 0 1]  [0 0 0 0 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(230, microstates.shape[0]):\n",
+    "    if \"K\" not in microstates[i]:\n",
+    "        continue\n",
+    "    for j in range(microstates.shape[0]):\n",
+    "        if \"K\" not in microstates[j]:\n",
+    "            continue\n",
+    "        _, condK, condW = isallowedTransition(microstates[i], microstates[j])\n",
+    "        __, cond = isConduction(microstates[i], microstates[j])\n",
+    "        if _:\n",
+    "            print(\"  {:<6}\\t->\\t{:5}\\t{:+}\\n{} \\t {}\\n{}  {}\".format(i, j, cond,\n",
+    "                                                        microstates[i], microstates[j],\n",
+    "                                                        condK, condW))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "76e4f696-8a6d-4de8-8735-410b41c4aeee",
    "metadata": {},
    "source": [
@@ -635,16 +974,6 @@
    "source": [
     "alpha, beta, p = [1]*3\n",
     "q = 1/3"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "e79b12a5-d775-4e9f-989a-695eeb46484c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from itertools import combinations, permutations, combinations_with_replacement, product"
    ]
   },
   {
